# error_mapper

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  changelog.md  todo_list.md
src/: lib.rs
src/errors/: actix_web.rs  chrono.rs  mod.rs  mysql_async.rs  reqwest.rs  serde.rs  serde_json.rs  system_error_codes.rs  the_error.rs  tokio.rs
src/errors/rust_errors/: core_lib.rs  mod.rs  std_lib.rs
src/errors_data/: error_codes.rs  mod.rs  structs.rs
src/logger/: mod.rs  the_logger.rs
src/macros/: general.rs
