[package]
name = "error_mapper"
version = "0.3.0"
edition = "2021"
authors = ["Tomas Ponce <nacho.ponce25@gmail.com>"]
keywords = ["error", "handling", "macro", "simple"]
description = "Simple and standardized Results and Errors handling accross all your projects"
rust-version = "1.71.1"
readme = "README.md"
repository = "https://github.com/tommyHellraiser/error_mapper"
categories = ["config", "data-structures", "development-tools", "rust-patterns"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26"}
lazy_static = "1.4.0"
mysql_async = { version = "0.32.2", features = ["default"]}
tokio = { version = "1.29.1", features = ["full"]}

[features]
full = ["mysql_async", "chrono", "tokio"]
mysql_async = []
chrono = []
tokio = []
no_std = []