[package]
name = "error_mapper"
version = "0.3.8"
edition = "2021"
authors = ["Tomas Ponce <nacho.ponce25@gmail.com>"]
keywords = ["error", "handling", "macro", "simple"]
description = "Simple and standardized Results and Errors handling accross all your projects"
rust-version = "1.71.1"
readme = "README.md"
repository = "https://github.com/tommyHellraiser/error_mapper"
categories = ["config", "data-structures", "development-tools", "rust-patterns"]
license = "MIT"
exclude = ["todo_list.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = [] }
chrono = { version = "0.4.26"}
lazy_static = "1.4.0"
mysql_async = { version = "0.32.2", features = ["default"]}
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = { version = "1.0.107", features = [] }
tokio = { version = "1.29.1", features = ["full"]}

[features]
full = ["mysql_async", "chrono", "tokio", "actix-web", "reqwest", "serde_json", "serde"]
mysql_async = []
chrono = []
tokio = []
no_std = []
actix-web = []
reqwest = []
serde_json = []
serde = []